# ts-switcher

./: .gitignore  Cargo.toml  README.md  release.sh  ts-switcher.desktop
.github/workflows/: release.yml
src/: main.rs
